; ModuleID = '/home/carl/AnghaBench/git/extr_unpack-trees.c_are_same_oid.c'
source_filename = "/home/carl/AnghaBench/git/extr_unpack-trees.c_are_same_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.name_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.name_entry*, %struct.name_entry*)* @are_same_oid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @are_same_oid(%struct.name_entry* %0, %struct.name_entry* %1) #0 {
  %3 = alloca %struct.name_entry*, align 8
  %4 = alloca %struct.name_entry*, align 8
  store %struct.name_entry* %0, %struct.name_entry** %3, align 8
  store %struct.name_entry* %1, %struct.name_entry** %4, align 8
  %5 = load %struct.name_entry*, %struct.name_entry** %3, align 8
  %6 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %5, i32 0, i32 0
  %7 = call i32 @is_null_oid(i32* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %21, label %9

9:                                                ; preds = %2
  %10 = load %struct.name_entry*, %struct.name_entry** %4, align 8
  %11 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %10, i32 0, i32 0
  %12 = call i32 @is_null_oid(i32* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %21, label %14

14:                                               ; preds = %9
  %15 = load %struct.name_entry*, %struct.name_entry** %3, align 8
  %16 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %15, i32 0, i32 0
  %17 = load %struct.name_entry*, %struct.name_entry** %4, align 8
  %18 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %17, i32 0, i32 0
  %19 = call i64 @oideq(i32* %16, i32* %18)
  %20 = icmp ne i64 %19, 0
  br label %21

21:                                               ; preds = %14, %9, %2
  %22 = phi i1 [ false, %9 ], [ false, %2 ], [ %20, %14 ]
  %23 = zext i1 %22 to i32
  ret i32 %23
}

declare dso_local i32 @is_null_oid(i32*) #1

declare dso_local i64 @oideq(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
